# cicada_2026_production

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  copyScript.py  createEncoderOnlyModel.py  doSynthesis.sh  dvc.yaml  evaluateModel.py  makeEncoderFirmware.py  makeTrainingFile.py  params.yaml  pyproject.toml  requirements.txt  studentEvaluation_3channel_vae.py  studentEvaluation_classic.py  trainCICADA2026Teacher.py  trainCICADA2026Teacher_VAE.py  trainCICADAStudent_classic.py  trainCICADAStudent_vae_3channel.py
src/: cicadaStudent_classic.py  cicadaStudent_vae_3channel.py  encoderOnlyModel.py  evaluateModels.py  evaluateStudent_classic.py  teacher_vae.py  trainTeacher.py  trainingFiles.py  utils.py
test/: test_cicadaStudent_classic.py  test_cicadaStudent_vae_3channel.py  test_evaluateModels.py  test_evaluateStudentClassic.py  test_makeTrainingFile.py  test_trainCICADA2026Teacher.py  test_trainTeacher.py  test_trainingFiles.py  test_utils.py
