[project]
name="cicada_2026_production"
version = "0.1.0"
description = "Make the CICADA 2026 models"
authors = [{name="Andrew"}]
dependencies = [
	     "pytest",
	     "pytest-cov",
	     "pytest-mock",
	     "pre-commit",
	     "ruff",
	     "pyright",
	     "tensorflow[and-cuda]",
	     "numpy",
	     "scikit-learn",
	     "dvc",
	     "dvc[ssh]",
	     "dvc[hdfs]",
	     "mlflow",
	     "h5py",
	     "uproot",
	     "qkeras @ git+https://github.com/julesmuhizi/qkeras.git@qdense_batchnorm",
	     "hls4ml @ git+https://github.com/AdrianAlan/hls4ml.git@cicada",
	     "mplhep",
]

[tool.ruff]
lint.select = ["E", "F", "I", "UP", "B", "TID"]
lint.ignore = ["UP007"]
target-version = "py39"

[tool.pyright]
venvPath = "."
venv = "cicada_env"
ignore = ["build"]
reportMissingImports = false